--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -4,6 +4,7 @@
 
 <h2>First Image of Assignment</h2>
 <img src="https://i.etsystatic.com/34827368/r/il/d422ff/5622190856/il_fullxfull.5622190856_sgjy.jpg" alt="Supreme Lord" width="460" height="345">
+<a href="Home.html">Click here to visit the Portfolio page.
 
 </body>
 </html>
