Added New Animationt to Contact-Me Page And Some Videos to My Gallery

--- a/Portfolio/Contact-Me.html
+++ b/Portfolio/Contact-Me.html
@@ -19,8 +19,20 @@
        </nav>
    </header>
    <div class="contacts">
-    <h1s>anshumannaithani7@gmail.com</h1>
-    <h3>7895411185</h3>
-    </div>
+    <h1 class="text">anshumannaithani7@gmail.com</h1>
+    <span>7895411185</span>
+    <a href="https://github.com/Anshuman0137" target="_blank">Click this link to visit my Github.<a>
+   </div>
+
+   <form>
+    <div class="frm">First Name : <input type="text" placeholder="first name"></div><br>
+    <div class="frm">Last Name : <input type="text" placeholder="last name"></div><br>
+    <div class="frm">Email Id: <input type="email" placeholder="email_id"></div><br>
+    <div class="button">
+       <button type="submit" id="b1">Submit</button>
+       <button type="reset" id="b2">Reset</button>
+   </div>
+   </form>
+
 </body>
 </html>
