--- a/Portfolio/My-Gallery.html
+++ b/Portfolio/My-Gallery.html
@@ -20,13 +20,13 @@
    </header>
 
    <div class="container">
-    <img src="assets/fender.jpg" alt="Guitar">
-    <img src="assets/Drums.jpg" alt="Drums">
-    <img src="assets/Pit Crew.jpg" alt="Pit crew">
-    <img src="assets/waterfall.jpg" alt="waterfall">
-    <img src="assets/SolarSystem.jpg" alt="SolarSystem">
-    <img src="assets/Black hole.jpg" alt="Black Hole">
-    <img src="assets/US NAVY.jpg" alt="Navy Seal">
+    <video src="assets/Cricket.mp4" controls autoplay muted></video>
+    <video src="assets/Ronaldo.webm" controls autoplay muted></video>
+    <video src="assets/Messi.mp4" controls autoplay muted></video>
+    <video src="assets/JP.mp4" controls autoplay muted></video>
+    <video src="assets/Valorant.mp4" controls autoplay muted></video>
+    <video src="assets/Guitar.mp4" controls autoplay muted></video>
+    <img src="assets/Pit Crew.jpg" alt="Navy Seal">
     <img src="assets/Slash.jpg" alt="Slash">
     <img src="assets/Tesla.jpg" alt="Sir Nikolas Tesla">
    </div>
