Added New Stylings For Responsive Designs And Changed The Backgrounnd Color of Page

--- a/Portfolio/Contact-Me.html
+++ b/Portfolio/Contact-Me.html
@@ -19,9 +19,9 @@
        </nav>
    </header>
    <div class="contacts">
-    <h1 class="text">anshumannaithani7@gmail.com</h1>
-    <span>7895411185</span>
-    <a href="https://github.com/Anshuman0137" target="_blank">Click this link to visit my Github.<a>
+    <span class="email">anshumannaithani7@gmail.com</span>
+    <span class="number">7895411185</span>
+    <a href="https://github.com/Anshuman0137" target="_blank" class="gitlink">Click this link to visit my Github.<a>
    </div>
 
    <form>
@@ -33,6 +33,6 @@
        <button type="reset" id="b2">Reset</button>
    </div>
    </form>
-
+   <footer>© 2024 by Anshuman Naithani</footer>
 </body>
 </html>
