--- a/Portfolio/My-Gallery.html
+++ b/Portfolio/My-Gallery.html
@@ -30,5 +30,6 @@
     <img src="assets/Slash.jpg" alt="Slash">
     <img src="assets/Tesla.jpg" alt="Sir Nikolas Tesla">
    </div>
+   <footer>© 2024 by Anshuman Naithani</footer>
 </body>
 </html>
