--- a/Portfolio/About-Me.html
+++ b/Portfolio/About-Me.html
@@ -5,14 +5,14 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Anshuman's Navigation Bar</title>
-   <link rel="stylesheet" href="css/styleHome.css">
+   <link rel="stylesheet" href="css/styleAbout-Me.css">
 </head>
 <body>
    <header>
        <nav class="navbar">
            <ul>
                <li><a href="My-Gallery.html" class="my-gallery">My Gallery</a></li>
-               <li><a href="About-Me.html" class="about-me">About Me</a></a></li>
+               <li><a href="About-Me.html" class="about-me">About Me</a></li>
                <li><a href="Contact-Me.html" class="contact-me">Contact Me</a></li>
                <li><a href="Home.html" class="home">Home</a></li>
            </ul>
@@ -22,5 +22,6 @@
    <h1>I will shortly post my bio here.</h1>
    <h3>Stay Tuned</h3>
    </div>
+   <footer>© 2024 by Anshuman Naithani</footer>
 </body>
 </html>
