--- a/Portfolio/Home.html
+++ b/Portfolio/Home.html
@@ -19,8 +19,9 @@
        </nav>
    </header>
    <div class="intro">
-   <h1>This is my portfolio's page.</h1>
-   <h3>I will be posting my personal projects details here.</h3>
+   <p>A</p><p>N</p><p>S</p><p>H</p><p>U</p><p>M</p><p>A</p><p>N</p><p>N</p><p>A</p><p>I</p><p>T</p><p>H</p><p>A</p><p>N</p><p>I</p>
+   <h3>FRONT END DEVELOPER</h3>
    </div>
+   <footer>© 2024 by Anshuman Naithani</footer>
 </body>
 </html>
