Made the Web Pages Responsive And Added Some New Styling

--- a/Portfolio/About-Me.html
+++ b/Portfolio/About-Me.html
@@ -1,27 +1,76 @@
 <!-- <link rel="stylesheet" href="styleNavbar.css"> -->
 <!DOCTYPE html>
 <html>
+
 <head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Anshuman's Navigation Bar</title>
-   <link rel="stylesheet" href="css/styleAbout-Me.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Anshuman's Navigation Bar</title>
+    <link rel="stylesheet" href="css/styleAbout-Me.css">
+    <link rel="icon" type="image/png" href="assets/icons8-favicon-64.png">
 </head>
+
 <body>
-   <header>
-       <nav class="navbar">
-           <ul>
-               <li><a href="My-Gallery.html" class="my-gallery">My Gallery</a></li>
-               <li><a href="About-Me.html" class="about-me">About Me</a></li>
-               <li><a href="Contact-Me.html" class="contact-me">Contact Me</a></li>
-               <li><a href="Home.html" class="home">Home</a></li>
-           </ul>
-       </nav>
-   </header>
-   <div class="intro">
-   <h1>I will shortly post my bio here.</h1>
-   <h3>Stay Tuned</h3>
-   </div>
-   <footer>© 2024 by Anshuman Naithani</footer>
+    <header>
+        <nav class="navbar">
+            <ul>
+                <li><a href="My-Gallery.html" class="my-gallery">Gallery</a></li>
+                <li><a href="About-Me.html" class="about-me">About Me</a></li>
+                <li><a href="Contact-Me.html" class="contact-me">Contact Me</a></li>
+                <li><a href="Home.html" class="home">Home</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <div class="intro">
+        <p>“I am passionate about technology, innovation and big challenging tasks on my to do list.”</p>
+        <h3>Stay Tuned</h3>
+        <a href="https://github.com/Anshuman0137" target="_blank"><img src="assets/github.png" alt="github-logo"></a>
+        <a href="https://www.linkedin.com/in/anshuman-naithani-34a9b7322/" target="_blank"><img
+                src="assets/linkedin.png" alt="github-logo"></a>
+    </div>
+    <div class="box">
+        <div class="skills">
+            <ul>
+                <li class="title">SKILLS</li><br>
+                <li>JAVA</li>
+                <li>CSS</li>
+                <li>HTML</li>
+                <li>GIT</li>
+            </ul>
+        </div>
+        <div class="hobbies">
+            <ul>
+                <li class="title">HOBBIES</li><br>
+                <li>Football</li>
+                <li>Guitar</li>
+                <li>Gaming</li>
+                <li>Music</li>
+            </ul>
+        </div>
+        <div class="education">
+            <ul>
+                <li class="title">EDUCATION</li><br>
+                <li>St. Thomas's College(ICSCE)</li>
+                <li>St. Thomas's College(ISC)</li>
+                <li>Graphic Era University</li>
+                <li>Rishikesh Public School</li>
+            </ul>
+        </div>
+        <div class="languages">
+            <ul>
+                <li class="title">PROGRAMMING LANGUAGES</li><br>
+                <li>JAVA</li>
+                <li>PYTHON</li>
+                <li>C</li>
+                <li>C++</li>
+            </ul>
+        </div>
+    </div>
+
+    <footer>
+        <p>© 2024 by Anshuman Naithani</p>
+    </footer>
 </body>
+
 </html>
