--- a/Portfolio/Contact-Me.html
+++ b/Portfolio/Contact-Me.html
@@ -6,12 +6,13 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Anshuman's Navigation Bar</title>
    <link rel="stylesheet" href="css/styleContact-Me.css">
+   <link rel="icon" type="image/png" href="assets/icons8-favicon-64.png">
 </head>
 <body>
    <header>
        <nav class="navbar">
            <ul>
-               <li><a href="My-Gallery.html" class="my-gallery">My Gallery</a></li>
+               <li><a href="My-Gallery.html" class="my-gallery">Gallery</a></li>
                <li><a href="About-Me.html" class="about-me">About Me</a></a></li>
                <li><a href="Contact-Me.html" class="contact-me">Contact Me</a></li>
                <li><a href="Home.html" class="home">Home</a></li>
@@ -20,17 +21,17 @@
    </header>
    <div class="contacts">
     <span class="email">anshumannaithani7@gmail.com</span>
-    <span class="number">7895411185</span>
+    <div class="number">7895411185</div>
     <a href="https://github.com/Anshuman0137" target="_blank" class="gitlink">Click this link to visit my Github.<a>
    </div>
 
-   <form>
-    <div class="frm">First Name : <input type="text" placeholder="first name"></div><br>
-    <div class="frm">Last Name : <input type="text" placeholder="last name"></div><br>
-    <div class="frm">Email Id: <input type="email" placeholder="email_id"></div><br>
+   <form class="form-div">
+    <div class="frm">First Name  <input type="text" placeholder="first name" required></div><br>
+    <div class="frm">Last Name  <input type="text" placeholder="last name" required></div><br>
+    <div class="frm">Email Id <input type="email" placeholder="email_id" required></div><br>
     <div class="button">
-       <button type="submit" id="b1">Submit</button>
-       <button type="reset" id="b2">Reset</button>
+       <button type="submit" id="b1"><b>Submit</b></button>
+       <button type="reset" id="b2"><b>Reset</b></button>
    </div>
    </form>
    <footer>© 2024 by Anshuman Naithani</footer>
