--- a/Portfolio/Home.html
+++ b/Portfolio/Home.html
@@ -6,12 +6,13 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Anshuman's Navigation Bar</title>
    <link rel="stylesheet" href="css/styleHome.css">
+   <link rel="icon" type="image/png" href="assets/icons8-favicon-64.png">
 </head>
 <body>
    <header>
        <nav class="navbar">
            <ul>
-               <li><a href="My-Gallery.html" class="my-gallery">My Gallery</a></li>
+               <li><a href="My-Gallery.html" class="my-gallery">Gallery</a></li>
                <li><a href="About-Me.html" class="about-me">About Me</a></a></li>
                <li><a href="Contact-Me.html" class="contact-me">Contact Me</a></li>
                <li><a href="Home.html" class="home">Home</a></li>
@@ -19,9 +20,15 @@
        </nav>
    </header>
    <div class="intro">
-   <p>A</p><p>N</p><p>S</p><p>H</p><p>U</p><p>M</p><p>A</p><p>N</p><p>N</p><p>A</p><p>I</p><p>T</p><p>H</p><p>A</p><p>N</p><p>I</p>
-   <h3>FRONT END DEVELOPER</h3>
+   <span class="intro-text">Hi I'm, </span>
+   <p>A</p><p>N</p><p>S</p><p>H</p><p>U</p><p>M</p><p>A</p><p>N</p> <p>N</p><p>A</p><p>I</p><p>T</p><p>H</p><p>A</p><p>N</p><p>I</p>
+   <h4>FRONT END DEVELOPER</h4>
    </div>
-   <footer>© 2024 by Anshuman Naithani</footer>
+   <div class="image-div">
+     <img src="assets/Anshuman_Picture.jpeg" alt="Person's image">
+   </div>
+   <footer>
+    <p>© 2024 by Anshuman Naithani</p>
+   </footer>
 </body>
 </html>
