--- a/Portfolio/My-Gallery.html
+++ b/Portfolio/My-Gallery.html
@@ -1,35 +1,38 @@
 <!-- <link rel="stylesheet" href="styleNavbar.css"> -->
 <!DOCTYPE html>
 <html>
-<head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Anshuman's Navigation Bar</title>
-   <link rel="stylesheet" href="css/styleMy-Gallery.css">
-</head>
-<body>
-   <header>
-       <nav class="navbar">
-           <ul>
-               <li><a href="My-Gallery.html" class="my-gallery">My Gallery</a></li>
-               <li><a href="About-Me.html" class="about-me">About Me</a></a></li>
-               <li><a href="Contact-Me.html" class="contact-me">Contact Me</a></li>
-               <li><a href="Home.html" class="home">Home</a></li>
-           </ul>
-       </nav>
-   </header>
 
-   <div class="container">
-    <video src="assets/Cricket.mp4" controls autoplay muted></video>
-    <video src="assets/Ronaldo.webm" controls autoplay muted></video>
-    <video src="assets/Messi.mp4" controls autoplay muted></video>
-    <video src="assets/JP.mp4" controls autoplay muted></video>
-    <video src="assets/Valorant.mp4" controls autoplay muted></video>
-    <video src="assets/Guitar.mp4" controls autoplay muted></video>
-    <img src="assets/Pit Crew.jpg" alt="Navy Seal">
-    <img src="assets/Slash.jpg" alt="Slash">
-    <img src="assets/Tesla.jpg" alt="Sir Nikolas Tesla">
-   </div>
-   <footer>© 2024 by Anshuman Naithani</footer>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Anshuman's Navigation Bar</title>
+    <link rel="stylesheet" href="css/styleMy-Gallery.css">
+    <link rel="icon" type="image/png" href="assets/icons8-favicon-64.png">
+</head>
+
+<body>
+    <header>
+        <nav class="navbar">
+            <ul>
+                <li><a href="My-Gallery.html" class="my-gallery">Gallery</a></li>
+                <li><a href="About-Me.html" class="about-me">About Me</a></a></li>
+                <li><a href="Contact-Me.html" class="contact-me">Contact Me</a></li>
+                <li><a href="Home.html" class="home">Home</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <div class="container">
+        <img src="assets/AI.jpg" alt="AI">
+       <img src="assets/Tesla.jpg" alt="Sir Nikolas Tesla">
+        <video src="assets/Ronaldo.webm" controls autoplay muted></video>
+        <img src="assets/Slash.jpg" alt="Slash">
+        <video src="assets/Messi.mp4" controls autoplay muted></video>
+        <video src="assets/JP.mp4" controls autoplay muted></video>
+        <video src="assets/Valorant.mp4" controls autoplay muted></video>
+        <video src="assets/Guitar.mp4" controls autoplay muted></video>
+    </div>
+    <footer>© 2024 by Anshuman Naithani</footer>
 </body>
+
 </html>
